# th-expand-syns

./: .gitignore  .travis.yml  README.markdown  README.md  cabal.project  changelog.markdown  stack-8.8.yaml  stack-ghc-9.0-alpha.yaml  test-all.zsh  th-expand-syns.cabal
.github/workflows/: haskell-ci.yml
Language/Haskell/TH/: ExpandSyns.hs
Language/Haskell/TH/ExpandSyns/: SemigroupCompat.hs
testing/: Main.hs  Types.hs  Util.hs  driver.hs
