name:                th-expand-syns
version:             0.1
synopsis:            Expand type synonyms in template haskell ASTs
description:         Expand type synonyms in template haskell ASTs
category:            Template Haskell
license:             BSD3
license-file:        LICENSE
author:              Daniel Schüssler
maintainer:          daniels@community.haskell.org
build-depends:       base >= 4, template-haskell, syb, containers
build-type:          Simple
ghc-options:         
exposed-modules:     Language.Haskell.TH.ExpandSyns
extra-source-files:  testing/Main.hs
