name:                th-expand-syns
version:             0.1
synopsis:            Expand type synonyms in template haskell ASTs
description:         Expand type synonyms in template haskell ASTs
category:            Template Haskell
license:             BSD3
license-file:        LICENSE
author:              Daniel Schüssler
maintainer:          daniels@community.haskell.org
cabal-version:       >= 1.2
build-type:          Simple
extra-source-files:  testing/Main.hs

source-repository head
 type: darcs
 location: http://code.haskell.org/~daniels/th-expans-syns

Library
    build-depends:       base >= 4, template-haskell, syb, containers
    ghc-options:         
    exposed-modules:     Language.Haskell.TH.ExpandSyns
