name:                th-expand-syns
version:             0.3.0.3
synopsis:            Expands type synonyms in Template Haskell ASTs
description:         Expands type synonyms in Template Haskell ASTs
category:            Template Haskell
license:             BSD3
license-file:        LICENSE
author:              Daniel Schüssler
maintainer:          daniels@community.haskell.org
cabal-version:       >= 1.6
build-type:          Simple
extra-source-files:  testing/Main.hs

source-repository head
 type: git
 location: git://github.com/DanielSchuessler/th-expand-syns.git

Library
    build-depends:       base >= 4 && < 5, template-haskell, syb, containers
    ghc-options:         
    exposed-modules:     Language.Haskell.TH.ExpandSyns
